<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AppPortfolioActivityFragment"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/portfolio_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_1"
        android:id="@+id/project_1_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_2"
        android:id="@+id/project_2_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject2" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_3"
        android:id="@+id/project_3_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject3" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_4"
        android:id="@+id/project_4_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject4" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_5"
        android:id="@+id/project_5_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_6"
        android:id="@+id/project_6_button"
        android:layout_gravity="center_horizontal"
        android:onClick="launchProject6" />

</LinearLayout>
